--- a/.awesome-CV/myCV/cv.tex
+++ b/.awesome-CV/myCV/cv.tex
@@ -53,7 +53,7 @@
 % \photo{./examples/profile.png}
 \name{Marcin}{Kamiński}
 \position{Senior Consultant{\enskip\cdotp\enskip}Product Manager{\enskip\cdotp\enskip}Technical Product Owner}
-\address{Poznań,Poland}
+\address{Poznań, Poland}
 
 \mobile{(+48) 782 685 194}
 \email{emkaminsk@gmail.com}
@@ -98,9 +98,10 @@ delivering 20\%+ efficiency gains."}
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
-\input{cv/education.tex}
-\input{cv/skills.tex}
 \input{cv/experience.tex}
+\clearpage
+\input{cv/skills.tex}
+\input{cv/education.tex}
 \input{cv/extracurricular.tex}
 \input{cv/honors.tex}
 \input{cv/certificates.tex}
