--- a/.awesome-CV/myCV/cv/certificates.tex
+++ b/.awesome-CV/myCV/cv/certificates.tex
@@ -11,66 +11,74 @@
 
   %---------------------------------------------------------
   \cvhonor
-    {10xDevs Certificate} % Name
+    {Building full-stack MVP applications using AI assisted workflows} % Name
     {10xDevs} % Issuer
-    {} % Credential ID
-    {November 2025} % Date(s)
+    {3e6311c3-...2b6} % Credential ID
+    {Nov 2025} % Date(s)
 
   %---------------------------------------------------------
   \cvhonor
-    {AiDevs3 Certificate} % Name
+    {AiDevs3 - Building AI Agents} % Name
     {AiDevs} % Issuer
-    {} % Credential ID
-    {December 2024} % Date(s)
+    {42b1d317-...682} % Credential ID
+    {Dec 2024} % Date(s)
+
+  %---------------------------------------------------------
+  \cvhonor
+  {Becoming Product Manager} % Name
+  {Linkedin Learning} % Issuer
+  {} % Credential ID
+  {Jul 2024} % Date(s)
 
 %---------------------------------------------------------
-  \cvhonor
-    {AiDevs2 Certificate} % Name
-    {AiDevs} % Issuer
-    {} % Credential ID
-    {November 2023} % Date(s)
+\cvhonor
+  {AiDevs2} % Name
+  {AiDevs} % Issuer
+  {} % Credential ID
+  {Nov 2023} % Date(s)
 
 %---------------------------------------------------------
-  \cvhonor
-    {Prince2 Foundation} % Name
-    {AXELOS} % Issuer
-    {} % Credential ID
-    {} % Date(s)
+\cvhonor
+{Product Management, DDD Event Storming, ISO27001} % Name
+{Linkedin Learning} % Issuer
+{} % Credential ID
+{2024} % Date(s)
 
 %---------------------------------------------------------
-  \cvhonor
-    {ISTQB Foundation} % Name
-    {International Software Testing Qualifications Board} % Issuer
-    {} % Credential ID
-    {} % Date(s)
+\cvhonor
+{Python, Relational Databases, SQL} % Name
+{FreeCodeCamp.org} % Issuer
+{} % Credential ID
+{2023} % Date(s)
 
 %---------------------------------------------------------
-  \cvhonor
-    {ISTQB Advanced Test Manager} % Name
-    {International Software Testing Qualifications Board} % Issuer
-    {} % Credential ID
-    {} % Date(s)
+\cvhonor
+  {Prince2 Foundation} % Name
+  {APMG-International} % Issuer
+  {02645757-01-GD2B} % Credential ID
+  {Oct 2012} % Date(s)
 
 %---------------------------------------------------------
-  \cvhonor
-    {IBAQB Foundation} % Name
-    {International Business Analysis Qualifications Board} % Issuer
-    {} % Credential ID
-    {} % Date(s)
+\cvhonor
+  {ISTQB Foundation} % Name
+  {International Software Testing Qualifications Board} % Issuer
+  {27928} % Credential ID
+  {Jun 2015} % Date(s)
 
 %---------------------------------------------------------
-  \cvhonor
-    {ITIL} % Name
-    {AXELOS} % Issuer
-    {} % Credential ID
-    {} % Date(s)
+\cvhonor
+  {ISTQB Advanced Test Manager} % Name
+  {International Software Testing Qualifications Board} % Issuer
+  {} % Credential ID
+  {Nov 2015} % Date(s)
 
 %---------------------------------------------------------
-  \cvhonor
-    {Design Thinking} % Name
-    {Accenture} % Issuer
-    {} % Credential ID
-    {} % Date(s)
+\cvhonor
+  {IBAQB Foundation} % Name
+  {International Business Analysis Qualifications Board} % Issuer
+  {BA-70018} % Credential ID
+  {Aug 2012} % Date(s)
+
 
 %---------------------------------------------------------
 \end{cvhonors}
