--- a/.awesome-CV/myCV/cv/experience.tex
+++ b/.awesome-CV/myCV/cv/experience.tex
@@ -17,8 +17,10 @@
     {Aug. 2023 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Product Owner for Master Data as a Service solutions, since September 2024 building from scratch platform for document indexing and equipment classification with AI capabilities, processing monthly 1M+ documents and 100k+ equipment items.}
-        \item {Product Owner working with ~20 engineers on Umetrics Studio platform, delivered several significant upgrades, such as API capabilities, collaboration features, etc.}
+        \item {Product Owner for Master Data as a Service solutions - Prometheus Group}
+        \item {Since September 2024 building from scratch platform for document indexing and equipment classification with AI capabilities, \\processing monthly 1M+ documents and 100k+ equipment items.}
+        \item {Product Owner working with ~20 engineers on Umetrics Studio platform - Sartorius AG} 
+        \item {Delivered several significant upgrades to the platform, such as API capabilities, collaboration features, etc.}
         \item {Tools: Jira, Miro, Confluence, AWS, GitLab}
         \item {Project technologies: C\#, React, Java, Kubernetes}
       \end{cvitems}
@@ -34,7 +36,7 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Guided delivery of all Codenotary's IT products, such as vault.immudb.io, sbomcenter.io, Trustcenter, and Opvizor.}
         \item {Interviewed customers to build and prioritize the product backlog.}
-        \item {Collaborated with the engineering manager and global multicultural team to translate market and product requirements into documentation, user stories, and test cases.}
+        \item {Collaborated with the engineering manager and global multicultural team to translate market \\and product requirements into documentation, user stories, and test cases.}
         \item {Coordinated refinements, conducted team retrospectives, and implemented engineering best practices.}
         \item {Assisted with release planning and manual testing.}
         \item {Tools: VSCode, Autorest API, GitHub, Miro, MobaXterm}
@@ -50,10 +52,10 @@
     {Feb. 2019 - Apr. 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Boosted retail credit sales in digital channels by 20\% with initiatives such as omnichannel lending, individual capacity assessment, optimizing user workflows and integrating real-time analytics tools.}
+        \item {Boosted retail credit sales in digital channels by 20\% with initiatives such as omnichannel lending, individual capacity assessment, \\optimizing user workflows and integrating real-time analytics tools.}
         \item {Implemented KNF recommendations through use case definition, business analysis and team building.}
         \item {Successful cooperation in an intra-bank group on implementation of emergency anti-Covid measures.}
-        \item {Drove 15\% increase in customer retention by leading customer feedback integration into product roadmaps, reducing feature delivery time by 25\% via Jira automation.}
+        \item {Drove 15\% increase in customer retention by leading customer feedback integration into product roadmaps, \\reducing feature delivery time by 25\% via Jira automation.}
         \item {Project technologies: Java, OpenShift, AbInitio, Teradata, Python, Jira, Confluence, Miro}
       \end{cvitems}
     }
