--- a/.awesome-CV/myCV/cv.tex
+++ b/.awesome-CV/myCV/cv.tex
@@ -76,11 +76,14 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra information}
 
-\quote{``Bridging business and technology to create value; E-MBA; leading AI/ML-driven SaaS platforms in fintech, biotech and engineering; \\
+\quote{``Bridging business and technology to create value; \\E-MBA with M‑shaped skill set spanning software engineering, AI/ML, and strategic leadership; \\leading AI/ML-driven SaaS platforms in fintech, biotech and engineering; \\
 delivering 20\%+ efficiency gains."}
 
 %-------------------------------------------------------------------------------
 \begin{document}
+
+% Disable the default PDF viewer
+\hypersetup{pdfpagemode=UseNone}
 
 % Print the header with above personal information
 % Give optional argument to change alignment(C: center, L: left, R: right)
@@ -88,11 +91,10 @@ delivering 20\%+ efficiency gains."}
 
 % Print the footer with 3 arguments(<left>, <center>, <right>)
 % Leave any of these blank if they are not needed
-\makecvfooter
+  \makecvfooter
   {\today}
-  {Marcin Kamiński~~~·~~~Curriculum Vitae}
+  {Marcin Kamiński~~~·~~~Curriculum Vitae\\ \fontsize{6pt}{1em}\selectfont I hereby authorise your company to process the attached personal information strictly for the purposes of job recruitment pursuant to the Personal Data Protection Act of 29 August 1997}
   {\thepage}
-
 
 %-------------------------------------------------------------------------------
 %	CV/RESUME CONTENT
