--- a/.awesome-CV/myCV/cv/certificates.tex
+++ b/.awesome-CV/myCV/cv/certificates.tex
@@ -32,14 +32,14 @@
 
 %---------------------------------------------------------
 \cvhonor
-  {AiDevs2} % Name
+  {AiDevs2 - Connecting GPT-4 with Application Logic} % Name
   {AiDevs} % Issuer
   {} % Credential ID
   {Nov 2023} % Date(s)
 
 %---------------------------------------------------------
 \cvhonor
-{Product Management, DDD Event Storming, ISO27001} % Name
+{Product Management, User Stories,DDD Event Storming, ISO27001, Salesforce} % Name
 {Linkedin Learning} % Issuer
 {} % Credential ID
 {2024} % Date(s)
@@ -79,6 +79,11 @@
   {BA-70018} % Credential ID
   {Aug 2012} % Date(s)
 
+\cvhonor
+{7 habits of highly effective people, Effective Leadership, Design Thinking, Project Management} % Name
+{Internal Santander Training} % Issuer
+{} % Credential ID
+{2010 - 2019} % Date(s)
 
 %---------------------------------------------------------
 \end{cvhonors}
