--- a/.awesome-CV/myCV/cv/education.tex
+++ b/.awesome-CV/myCV/cv/education.tex
@@ -32,6 +32,17 @@
       \item {Completed full studies with extra summer courses in Helsinki}
     \end{cvitems}
   }
+%---------------------------------------------------------
+\cventry
+{PhD, Economics} % Degree
+{University of Economics} % Institution
+{Poznań, Poland} % Location
+{Feb. 2001 - June 2005} % Date(s)
+{
+  \begin{cvitems} % Description(s) bullet points
+    \item {Full time, Conducting classes for students of the University of Economics: Econometrics, Forecasting, and Statistical Methods}
+  \end{cvitems}
+}
 
 %---------------------------------------------------------
 \cventry
@@ -41,7 +52,7 @@
 {Oct. 1996 - Feb. 2001} % Date(s)
 {
   \begin{cvitems} % Description(s) bullet points
-    \item {Full time, Banking specialization, graduated with distinction}
+    \item {Full time, Banking specialization}
   \end{cvitems}
 }
 
