--- a/.awesome-CV/myCV/cv/experience.tex
+++ b/.awesome-CV/myCV/cv/experience.tex
@@ -69,8 +69,8 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Streamlined project portfolio management for Risk Division, reducing delivery timelines by 25\% through Agile prioritization frameworks.}
-        \item {Drove enhancements to the Customer Analytical Repository, providing data for CRM and Risk and increasing current data availability by 300\%.}
-        \item {Directed team of 15 data analysts and developers during Santander-Deutsche Bank merger, achieving 100\% uptime and significant NPL reduction.}        
+        \item {Drove enhancements to the Customer Analytical Repository, providing data for CRM and Risk, \\increasing current data availability by 300\%.}
+        \item {Directed team of 15 data analysts and developers during Santander-Deutsche Bank merger, \\achieving 100\% uptime and significant NPL reduction.}        
       \end{cvitems}
     }
 
@@ -85,7 +85,7 @@
         \item {Held various roles in reporting and decision systems development, advancing to a management position in 2009.}
         \item {Oversaw current validation of Credit Risk scorecards, reporting to the Bank's Credit Policy Forum} 
         \item {Test Leader for Risk Division during the merger with Kredyt Bank.}
-        \item {Reduced operational costs by 20\% by leading migration of Bank's Decision Engine from Strata CGI to AbInitio, which enhanced processing speed by 300\%.}
+        \item {Reduced operational costs by 20\% by leading migration of Bank's Decision Engine from Strata CGI to AbInitio, \\which enhanced processing speed by 300\%.}
         \item {Conducted business analysis, communicated requirements to Java developers.}        
       \end{cvitems}
     }
